# my-writing-app

./: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: typora-clone-mermaid-alternatives.md  typora-clone-prd.md  typora-clone-system-design.md  typora-clone-tasks.md  typora-clone-tech-research.md
src/: App.tsx  DiagramPanel.tsx  MilkdownEditor.tsx  RecentFilesMenu.tsx  fileCommands.ts  main.tsx  styles.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: diagrams.rs  file_io.rs  lib.rs  main.rs  preferences.rs  recent_files.rs  store.rs
src/__tests__/: App.test.tsx  DiagramPanel.test.tsx  MilkdownEditor.slashMenu.test.tsx  MilkdownEditor.test.tsx  RecentFilesMenu.test.tsx  fileCommands.test.ts  milkdown-roundtrip.test.ts  sanity.test.ts
src/spike/: MilkdownSpike.tsx
src/test-utils/: mdValidator.ts
tools/md-validator/: Cargo.toml
tools/md-validator/src/: main.rs
