[package]
name = "md-validator"
version = "0.1.0"
edition = "2021"
description = "Standalone CLI: parses markdown from stdin via pulldown-cmark and reports structural findings as JSON. Deliberately has no Tauri/GTK dependency so it can build anywhere pulldown-cmark itself builds — used by the frontend round-trip test (see docs/typora-clone-tasks.md, Phase 0.5) to verify Milkdown's serialized markdown re-parses cleanly, without needing the full Tauri app to compile."

[[bin]]
name = "md-validator"
path = "src/main.rs"

[dependencies]
pulldown-cmark = "0.13.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
